--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 /node_modules
-/public/hot
 /public/storage
+/public/hot
 /storage/*.key
 /vendor
-.env
-.phpunit.result.cache
+/.idea
 Homestead.json
 Homestead.yaml
-npm-debug.log
-yarn-error.log
+.env
+1.zip
+2.zip
+3.zip
+blog.zip
+vendor.zip
